# display

./: .gitignore  CMakeLists.txt  Kconfig  README.md  display.c  display_driver.c  display_private.h  driver_qemu.c  driver_rm67162.c  driver_ssd1680.c  driver_ssd1681.c  driver_ssd168x.c  driver_st7789.c  idf_component.yml  lv_conf.h  ssd1680_waveshare_2in13_lut.h  ssd1681_waveshare_1in54_lut.h
epd_driver/: depg0213bn.c  depg0213bn.h  epd_driver_common.c  epd_driver_private.h  gdey0154d67.c  gdey0154d67.h  gdey0213b74.c  gdey0213b74.h
epd_driver/include/: depg0213bn.h  gdey0154d67.h  gdey0213b74.h
examples/epaper_demo/: sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/epaper_demo/main/: idf_component.yml  img_bitmap.c  img_bitmap.h  main.c
examples/epaper_lvgl_demo/: sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/epaper_lvgl_demo/main/: CMakeLists.txt  idf_component.yml  img_bitmap.h  lvgl_demo_ui.c  main.c  private.h
examples/lvgl_demo_1/: CMakeLists.txt  sdkconfig.defaults
examples/lvgl_demo_1/main/: CMakeLists.txt  idf_component.yml  (+3 more)
examples/lvgl_demo_2/: CMakeLists.txt  sdkconfig.defaults
include/: display.h  driver_vendor.h  ui_events.h
lvui/: ui.c  ui.h
lvui/screens/: ui_BlankScreen.c  ui_InfoScreen.c  ui_InitScreen.c  ui_RecordScreen.c  ui_SleepScreen.c  ui_SpeedScreen.c  ui_StatsScreen.c
lvui_common/: CMakeLists.txt  ui_common.c  ui_helpers.c
lvui_common/components/: ui_comp.c  ui_comp_hook.c
lvui_common/fonts/: genfont.sh  ui_font_OpenSansBold14p4.c  ui_font_OpenSansBold16p1.c  ui_font_OpenSansBold16p2.c  ui_font_OpenSansBold16p4.c  ui_font_OpenSansBold20p4.c  ui_font_OpenSansBold24p1.c  ui_font_OpenSansBold24p2.c  ui_font_OpenSansBold24p4.c  ui_font_OpenSansBold28p2.c  ui_font_OpenSansBold28p4.c  ui_font_OpenSansBold30p1.c  ui_font_OpenSansBold30p2.c  ui_font_OpenSansBold30p4.c  ui_font_OpenSansBold32p2.c  ui_font_OpenSansBold32p4.c  ui_font_OpenSansBold36p1.c  ui_font_OpenSansBold36p2.c  ui_font_OpenSansBold36p4.c  ui_font_OpenSansBold40p4.c  ui_font_OpenSansBold48p4.c  ui_font_OpenSansBold60p1.c  ui_font_OpenSansBold60p2.c  ui_font_OpenSansBold60p4.c  ui_font_OpenSansBold72b2.c  ui_font_OpenSansBold72p2.c  ui_font_OpenSansBold72p4.c  ui_font_OpenSansBold76p4.c  ui_font_OpenSansBold78b2.c  ui_font_OpenSansBold78p2.c  ui_font_OpenSansBold78p4.c  ui_font_OpenSansBold80b2.c  ui_font_OpenSansBold80p2.c  ui_font_OpenSansBold80p4.c  ui_font_OpenSansBold84p1.c  ui_font_OpenSansBold84p2.c  ui_font_OpenSansBold84p4.c  ui_font_OpenSansRegular12p4.c  ui_font_OpenSansRegular14p4.c  ui_font_OpenSansRegular16p2.c  (+76 more)
lvui_common/img16b/: 7_black_48px.c  battery_horiz_48px.c  battery_horiz_bold_48px.c  duotone_48px.c  espidf-logo-txt-48px.c  espidf-logo-v2-48px.c  espidf-logo-v3-48px.c  fanatic_48px.c  ga_48px.c  ga_logo_n_48px-2.c  gunsails-48px.c  jp_48px.c  loftsails_48px.c  near_me_bold_48px.c  near_me_disabled_bold_48px.c  np_48px.c  p7_48px.c  patrik_48px.c  radio_button_checked_24px.c  radio_button_checked_48px.c  radio_button_checked_bold_24px.c  radio_button_checked_bold_48px.c  radio_button_partial_24px.c  radio_button_partial_48px.c  radio_button_partial_bold_24px.c  radio_button_partial_bold_48px.c  radio_button_unchecked_24px.c  radio_button_unchecked_48px.c  radio_button_unchecked_bold_24px.c  radio_button_unchecked_bold_48px.c  save_48px.c  save_bold_48px.c  sb_48px.c  sd_trouble_48px.c  sd_trouble_bold_48px.c  settings_24px.c  settings_48px.c  ui_img_2129950171.c  ui_img_battery_0_bar_fill0_wght400_grad0_opsz24_png.c  ui_img_battery_horiz_000_fill0_wght400_grad0_opsz24_png.c  (+16 more)
lvui_common/img8b/: battery_horiz_48px.c  battery_horiz_bold_48px.c  duotone_48px.c  espidf-logo-v2-48px.c  espidf-logo-v2-96px.c  espidf-logo-v3-48px.c  espidf-logo-v3-96px.c  fanatic_48px.c  ga_48px.c  ga_logo_n_48px.c  gunsails-48px.c  gunsails_48px.c  jp_48px.c  loftsails_48px.c  near_me_48px.c  near_me_bold_48px.c  near_me_disabled_48px.c  near_me_disabled_bold_48px.c  north_48px.c  np_48px.c  ns-48px.c  ns_48px.c  p7_48px.c  p7_black_48px.c  patrik_48px.c  radio_button_checked_24px.c  radio_button_checked_48px.c  radio_button_checked_bold_24px.c  radio_button_checked_bold_48px.c  radio_button_partial_24px.c  radio_button_partial_48px.c  radio_button_partial_bold_24px.c  radio_button_partial_bold_48px.c  radio_button_unchecked_24px.c  radio_button_unchecked_48px.c  radio_button_unchecked_bold_24px.c  radio_button_unchecked_bold_48px.c  s2maui_48px.c  save_48px.c  save_bold_48px.c  (+25 more)
lvui_common/include/: ui_common.h  ui_comp.h  ui_comp_bigdatapanel.h  ui_comp_hook.h  ui_comp_smalldatapanel.h  ui_comp_statuspanel.h  ui_events.h  ui_helpers.h
lvui_common/lv_ui_comp/: lv_comp_cell.c  lv_comp_cell.h  lv_comp_info_panel.c  lv_comp_info_panel.h  lv_comp_main_screen.c  lv_comp_main_screen.h  lv_comp_speed_panel.c  lv_comp_speed_panel.h  lv_comp_stat_panel.c  lv_comp_stat_panel.h  lv_comp_statusbar.c  lv_comp_statusbar.h  lv_comp_two_col_panel.c  lv_comp_two_col_panel.h
lvui_ssd1680/: ui.c  ui.h  ui_themes.c
lvui_ssd1680/components/: ui_comp_bigdatapanel.c  ui_comp_hook.c  ui_comp_smalldatapanel.c  ui_comp_statuspanel.c
lvui_ssd1680/screens/: ui_InfoScreen.c  ui_InitScreen.c  ui_RecordScreen.c  ui_SleepScreen.c  ui_SpeedScreen.c  ui_StatsScreen.c
lvui_ssd1681/: ui.c  ui.h
lvui_ssd1681/components/: ui_comp_bigdatapanel.c  ui_comp_smalldatapanel.c  ui_comp_statuspanel.c
lvui_ssd1681/screens/: ui_InfoScreen.c  ui_SleepScreen.c  ui_SpeedScreen.c  ui_StatsScreen.c
lvui_st7789/: ui.c  ui.h  ui_themes.c
lvui_st7789/components/: ui_comp_bigdatapanel.c  ui_comp_smalldatapanel.c  ui_comp_statuspanel.c
lvui_st7789/screens/: ui_InfoScreen.c  ui_InitScreen.c  ui_RecordScreen.c  ui_SpeedScreen.c  ui_StatsScreen.c
(+3 files in other folders)
